--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -17,6 +17,7 @@ layout: default
         <a href="https://www.ximalaya.com/album/79394708">喜马拉雅</a><br>
         <a href="https://podcasts.apple.com/cn/podcast/%E9%A1%B6%E5%88%8A%E8%83%8C%E5%90%8E%E7%9A%84%E6%95%85%E4%BA%8B/id1729028477">Apple Podcasts</a><br>
         <a href="https://open.spotify.com/show/5SzIqOMQfveOSjsjZA7J2I">Spotify</a><br>
+        <a href="https://youtube.com/@brainpod-naoguo?si=SnwjjlbPLXmvkoCz">YouTube</a>
         <br>
         <br>
         <a href="https://www.buymeacoffee.com/naoguo">Buy me a coffee 🥹</a><br>
