--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -14,6 +14,7 @@ layout: default
         <h3 class="contact-title">如何订阅</h3>
         <a href="https://www.xiaohongshu.com/user/profile/617cf8ba0000000002021c19">小红书</a><br>
         <a href="https://www.xiaoyuzhoufm.com/podcast/65beb6580847349e0ce782c1">小宇宙</a><br>
+        <a href="https://music.163.com/#/djradio?id=1213369535">网易云音乐</a><br>
         <a href="https://www.ximalaya.com/album/79394708">喜马拉雅</a><br>
         <a href="https://podcasts.apple.com/cn/podcast/%E9%A1%B6%E5%88%8A%E8%83%8C%E5%90%8E%E7%9A%84%E6%95%85%E4%BA%8B/id1729028477">Apple Podcasts</a><br>
         <a href="https://open.spotify.com/show/5SzIqOMQfveOSjsjZA7J2I">Spotify</a><br>
